Finalize styling for banner and nav bar

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <script src="https://kit.fontawesome.com/c57fad306c.js" crossorigin="anonymous"></script>
     <meta charset="utf-8" />
     <link rel="icon" href="/favicon.ico" />
     <link
